# SetecPartitionWizard

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.bat  build_hwdiag_release.bat
cmake/: CompilerWarnings.cmake  FindWMI.cmake  GenerateKey.cmake  QtDeployHelper.cmake  Version.cmake
docs/: build.md  tool_compilers.md
installer/: Package.wxs
resources/: resources.qrc  setec.manifest  setec.rc
resources/styles/: default.qss
scripts/: install_tools.ps1  repair_path.ps1
src/: CMakeLists.txt
src/app/: CMakeLists.txt  SingleInstance.cpp  SingleInstance.h  main.cpp
src/core/: CMakeLists.txt
src/core/common/: Constants.h  Error.h  Logging.cpp  Logging.h  Obfuscate.h  Result.h  Types.cpp  Types.h  Version.h
src/core/diagnostics/: Benchmark.cpp  Benchmark.h  SurfaceScan.cpp  SurfaceScan.h
src/core/disk/: DiskEnumerator.cpp  DiskEnumerator.h  DiskGeometry.cpp  DiskGeometry.h  FilesystemDetector.cpp  FilesystemDetector.h  FilesystemInfo.cpp  FilesystemInfo.h  PartitionTable.cpp  PartitionTable.h  RawDiskHandle.cpp  RawDiskHandle.h  SmartReader.cpp  SmartReader.h  VolumeHandle.cpp  VolumeHandle.h
src/core/filesystem/: FormatEngine.cpp  FormatEngine.h
src/core/imaging/: Checksums.cpp  Checksums.h  Decompressor.cpp  Decompressor.h  DiskCloner.cpp  DiskCloner.h  ImageCatalog.cpp  ImageCatalog.h  ImageCreator.cpp  ImageCreator.h  ImageRestorer.cpp  ImageRestorer.h  IsoFlasher.cpp  IsoFlasher.h  SevenZipExtractor.cpp  SevenZipExtractor.h  VirtualDisk.cpp  VirtualDisk.h
src/core/maintenance/: SdCardAnalyzer.cpp  SdCardAnalyzer.h  SdCardRecovery.cpp  SdCardRecovery.h  SecureErase.cpp  SecureErase.h
src/core/net/: DownloadManager.cpp  DownloadManager.h
src/core/operations/: Operation.h  OperationQueue.cpp  OperationQueue.h  PartitionOperations.cpp  PartitionOperations.h
src/core/recovery/: BootRepair.cpp  BootRepair.h  FileRecovery.cpp  FileRecovery.h  PartitionRecovery.cpp  PartitionRecovery.h
src/core/security/: BootAuthenticator.cpp  BootAuthenticator.h  EncryptedVault.cpp  EncryptedVault.h  Fido2Manager.cpp  Fido2Manager.h
src/ui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h
src/ui/tabs/: DiagnosticsTab.cpp  DiagnosticsTab.h  DiskPartitionTab.cpp  DiskPartitionTab.h  ImagingTab.cpp  ImagingTab.h  KaliCreatorTab.cpp  KaliCreatorTab.h  LinuxFlasherTab.cpp  LinuxFlasherTab.h  MaintenanceTab.cpp  MaintenanceTab.h  NonWindowsFsTab.cpp  NonWindowsFsTab.h  RecoveryTab.cpp  RecoveryTab.h  SdCardTab.cpp  SdCardTab.h  SecurityTab.cpp  SecurityTab.h  VirtualDiskTab.cpp  VirtualDiskTab.h
src/ui/widgets/: DiskMapWidget.cpp  DiskMapWidget.h
tests/: CMakeLists.txt  test_result.cpp
tools/: bootstrap_encrypt.cmake  generate_lic.py  keygen.cpp  src_cipher.cpp  unlock.key
